feat: remove direct image handling by artists and songs
